--- a/catalog/index.html
+++ b/catalog/index.html
@@ -16,7 +16,7 @@
         <div class="container-sm px-6 py-3">
             <div class="flex items-center justify-between">
                 <div class="flex items-cetner justify-between space-x-8">
-                    <img src="../imgs/logo.png" width="50" >
+                    <a href="../index.html"><img src="../imgs/logo.png" width="50" ></a>
                     <div class="hidden xl:flex items-center justify-between space-x-4">
                         <a href="../index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">Главная</a>
                         <a href="../about/index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">О компании</a>
@@ -32,7 +32,7 @@
                         <a class="font-light text-gray-700">+7 (7182) 64 44 37</a>
                         <a class="font-light text-gray-700">+7 701 428 22 40</a>
                     </div>
-                    <button class="bg-[#092A5E] rounded-xl px-4 py-3 text-white text-sm sm:px-6 sm:text-base font-medium">Обратный звонок</button>
+                    <a href="tel:+77182644437"  class="bg-[#092A5E] rounded-xl px-4 py-3 text-white text-sm sm:px-6 sm:text-base font-medium">Обратный звонок</a>
                     <button class="xl:hidden p-4" onclick="toggleMenu()"><img src="../imgs/menu.png" width="25"></button>
                 </div>
             </div>
@@ -51,8 +51,8 @@
     
     <section class="bg-white">
         <div class="container-sm py-20">
-            <div class="grid grid-rows-3 grid-cols-3 grid-flow-row gap-1">
-                <a href="../products/index.html" class="row-span-2">
+            <div class="grid md:grid-rows-3 grid-cols-3 grid-flow-row gap-1">
+                <a href="../products/index.html" class="md:row-span-2">
                     <div class="catalog-item bg-white shadow-lg h-full hover:cursor-pointer">
                         <div class="relative flex flex-col justify-between h-full">
                             <p class="p-8 font-medium text-lg">Анализ жидкостей</p>
