--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="font-light text-gray-700">+7 (7182) 64 44 37</a>
                         <a class="font-light text-gray-700">+7 701 428 22 40</a>
                     </div>
-                    <button class="bg-[#092A5E] rounded-xl px-4 py-3 text-white text-sm sm:px-6 sm:text-base font-medium">Обратный звонок</button>
+                    <a href="tel:+77182644437" class="bg-[#092A5E] rounded-xl px-4 py-3 text-white text-sm sm:px-6 sm:text-base font-medium">Обратный звонок</a>
                     <button class="xl:hidden p-4" onclick="toggleMenu()"><img src="../imgs/menu.png" width="25"></button>
                 </div>
             </div>
