--- a/product/index.html
+++ b/product/index.html
@@ -16,7 +16,7 @@
         <div class="container-sm px-6 py-3">
             <div class="flex items-center justify-between">
                 <div class="flex items-cetner justify-between space-x-8">
-                    <img src="../imgs/logo.png" width="50" >
+                    <a href="../index.html"><img src="../imgs/logo.png" width="50" ></a>
                     <div class="hidden xl:flex items-center justify-between space-x-4">
                         <a href="../index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">Главная</a>
                         <a href="../about/index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">О компании</a>
@@ -32,7 +32,7 @@
                         <a class="font-light text-gray-700">+7 (7182) 64 44 37</a>
                         <a class="font-light text-gray-700">+7 701 428 22 40</a>
                     </div>
-                    <button class="bg-[#092A5E] rounded-xl px-4 py-3 text-white text-sm sm:px-6 sm:text-base font-medium">Обратный звонок</button>
+                    <a href="tel:+77182644437"  class="bg-[#092A5E] rounded-xl px-4 py-3 text-white text-sm sm:px-6 sm:text-base font-medium">Обратный звонок</a>
                     <button class="xl:hidden p-4" onclick="toggleMenu()"><img src="../imgs/menu.png" width="25"></button>
                 </div>
             </div>
@@ -58,10 +58,10 @@
                 <div class="ml-5 flex flex-col">
                     <p class="font-semibold text-2xl">Вторичный измерительный преобразователь Liquiline Mobile CML18</p>
                     <div class="flex items-center space-x-12 mt-10 justify-between w-full">
-                        <button class="flex items-center space-x-8 bg-[#092A5E] rounded-xl px-6 py-4 text-white text-lg font-medium">
+                        <a href="tel:+77182644437" class="flex items-center space-x-8 bg-[#092A5E] rounded-xl px-5 py-3 text-white lg:text-lg font-medium">
                             <span>Связаться</span>
-                            <img src="../imgs/arrow-long-right-white.svg" >
-                        </button>
+                            <img src="../imgs/arrow-long-right-white.svg" width="40">
+                        </a>
                         <div class="flex flex-col space-y-2 text-sm">
                             <p class="text-gray-700">Проконсультироваться по телефону:</p>
                             <p class="font-medium">+7 (7182) 64 44 37</p>
