--- a/products/index.html
+++ b/products/index.html
@@ -16,7 +16,7 @@
         <div class="container-sm px-6 py-3">
             <div class="flex items-center justify-between">
                 <div class="flex items-cetner justify-between space-x-8">
-                    <img src="../imgs/logo.png" width="50" >
+                    <a href="../index.html"><img src="../imgs/logo.png" width="50" ></a>
                     <div class="hidden xl:flex items-center justify-between space-x-4">
                         <a href="../index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">Главная</a>
                         <a href="../about/index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">О компании</a>
@@ -32,7 +32,7 @@
                         <a class="font-light text-gray-700">+7 (7182) 64 44 37</a>
                         <a class="font-light text-gray-700">+7 701 428 22 40</a>
                     </div>
-                    <button class="bg-[#092A5E] rounded-xl px-4 py-3 text-white text-sm sm:px-6 sm:text-base font-medium">Обратный звонок</button>
+                    <a href="tel:+77182644437"  class="bg-[#092A5E] rounded-xl px-4 py-3 text-white text-sm sm:px-6 sm:text-base font-medium">Обратный звонок</a>
                     <button class="xl:hidden p-4" onclick="toggleMenu()"><img src="../imgs/menu.png" width="25"></button>
                 </div>
             </div>
@@ -61,20 +61,20 @@
         <div class="container-sm pb-20">
             <div class="flex items-end">
                 <div>
-                    <div class="grid grid-rows-2 grid-cols-4 grid-flow-row">
-                        <div class="row-span-2 col-span-2">
+                    <div class="grid md:grid-rows-2 grid-cols-4 grid-flow-row">
+                        <a href="/product/index.html" class="md:row-span-2 col-span-2">
                             <div class="product-item bg-white h-full hover:cursor-pointer">
                                 <div class="flex flex-col justify-between h-full">
                                     <div class="flex justify-center items-center pt-10">
                                         <img src="../imgs/products/Liquiline Mobile CML18_s_stehend_001-2 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-8">
-                                        <p class="font-medium text-xl">Вторичный измерительный преобразователь Liquiline Mobile CML18</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Вторичный измерительный преобразователь Liquiline Mobile CML18</p>
+                                        <img class="w-[20px] md:w-[40px]" src="../imgs/arrow-right-black.svg" class="arrow">
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                         <div>
                             <div class="product-item bg-white h-full hover:cursor-pointer">
                                 <div class="flex flex-col justify-between h-full">
@@ -82,8 +82,8 @@
                                         <img src="../imgs/products/CPL51E_s_20.01 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-4">
-                                        <p class="font-medium text-xl">Датчик измерения pH Memosens CPL51E</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Датчик измерения pH Memosens CPL51E</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -95,8 +95,8 @@
                                         <img src="../imgs/products/CYZ71D 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-6 p-4">
-                                        <p class="font-medium text-xl">Мультипараметрическая программа Memobase Plus CYZ71D</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Мультипараметрическая программа Memobase Plus CYZ71D</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -108,8 +108,8 @@
                                         <img src="../imgs/products/Zero_point_gel_COY8_1 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-4">
-                                        <p class="font-medium text-xl">Гель для определения истинной нулевой точки COY8</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Гель для определения истинной нулевой точки COY8</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -121,8 +121,8 @@
                                         <img src="../imgs/products/Memosens CLL47E 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-4">
-                                        <p class="font-medium text-xl">Digital conductivity sensor Memosens CLL47E</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Digital conductivity sensor Memosens CLL47E</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -134,8 +134,8 @@
                                         <img src="../imgs/products/Digital oxygen sensor Memosens COL37E 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-8">
-                                        <p class="font-medium text-xl">Digital oxygen sensor Memosens COL37E</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Digital oxygen sensor Memosens COL37E</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -147,8 +147,8 @@
                                         <img src="../imgs/products/Memosens CPL53E 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-8">
-                                        <p class="font-medium text-xl">Digital pH sensor Memosens CPL53E</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Digital pH sensor Memosens CPL53E</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -160,8 +160,8 @@
                                         <img src="../imgs/products/Memosens CPL57E 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-8">
-                                        <p class="font-medium text-xl">Digital pH sensor Memosens CPL57E</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Digital pH sensor Memosens CPL57E</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -173,8 +173,8 @@
                                         <img src="../imgs/products/Memosens CPL59E 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-8">
-                                        <p class="font-medium text-xl">Digital pH sensor Memosens CPL59E</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Digital pH sensor Memosens CPL59E</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -188,8 +188,8 @@
                                         <img src="../imgs/products/CYK20_Memosens cable_nonEx 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-4">
-                                        <p class="font-medium text-xl">Digital measuring cableCYK20</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Digital measuring cableCYK20</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -202,8 +202,8 @@
                                         <img src="../imgs/products/LiquilineTo Go CYM290 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-4">
-                                        <p class="font-medium text-xl">Multiparameter handheldLiquiline To Go CYM290</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Multiparameter handheldLiquiline To Go CYM290</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -215,8 +215,8 @@
                                         <img src="../imgs/products/Converterbox CYM17_s_001 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-6 p-4">
-                                        <p class="font-medium text-xl">Memosens Analog Converter CYM17</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Memosens Analog Converter CYM17</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -228,8 +228,8 @@
                                         <img src="../imgs/products/LiquilineTo Go CYM291 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-4">
-                                        <p class="font-medium text-xl">Ex-certified multiparameter handheldLiquiline To Go CYM291</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Ex-certified multiparameter handheldLiquiline To Go CYM291</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
@@ -241,15 +241,15 @@
                                         <img src="../imgs/products/CPY20 pH buffers 1.png">
                                     </div>
                                     <div class="flex flex-col space-y-8 p-8">
-                                        <p class="font-medium text-xl">Буферный раствор для датчиков измерения рН CPY20</p>
-                                        <img src="../imgs/arrow-right-black.svg" class="arrow" width="40">
+                                        <p class="font-medium text-sm md:text-xl">Буферный раствор для датчиков измерения рН CPY20</p>
+                                        <img src="../imgs/arrow-right-black.svg" class="arrow w-[20px] md:w-[40px]">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="relative bg-[#092A5E] px-6">
+                <div class="hidden md:block relative bg-[#092A5E] px-6">
                     <div class="flex justify-center items-center">
                         <a href="#top" class="rounded-full w-[50px] h-[50px] bg-[#A9C7F3] -mt-4">
                             <div class="flex items-center justify-center w-full h-full">
